tdf#156830: fix faulty transformation order in cairo canvas for patterns

Change-Id: Ib58e845c23dd14bbc3b96e5549a722b650d593a6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162069
Tested-by: Jenkins
Reviewed-by: Sarper Akdemir <sarper.akdemir.extern@allotropia.de>
(cherry picked from commit 84055d875ead6d7862cd8ddc5697a280240411fe)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162008
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
(cherry picked from commit 3add4092d29b9b03c00dfa24caa917a3fc84540b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163972
Tested-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>